<?xml version="1.0"?>
<package format="3">
  <name>bilu</name>
  <version>0.1.0</version>
  <description>
    Projeto do robô bilu, utilizando ROS 2 para navegação e interação com serviços.
  </description>

  <maintainer email="eduardopontobarreto@gmail.com">eduardo-barreto</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependências do projeto -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cg_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_test</test_depend>

  <!-- Exportar ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
